@@ -161,7 +161,7 @@
 
 	<widget>
 	  <class>GtkCheckButton</class>
-	  <name>disable-animations</name>
+	  <name>enable-animations</name>
 	  <can_focus>True</can_focus>
 	  <label>_Enable animation</label>
 	  <active>False</active>
