@@ -7,11 +7,13 @@
 
 #include "panel-gconf.h"
 
-static gchar * panel_gconf_global_config_get_full_key (const gchar *key) {
+static gchar * 
+panel_gconf_global_config_get_full_key (const gchar *key) {
 	return g_strdup_printf ("/apps/panel/global/%s", key);
 }
 
-GConfClient * panel_gconf_get_client (void) {
+GConfClient * 
+panel_gconf_get_client (void) {
 	static GConfClient *client = NULL;
 
         if (!client)
@@ -20,7 +22,8 @@ GConfClient * panel_gconf_get_client (void) {
         return client;
 }
 
-gchar * panel_gconf_get_session_key (void) {
+gchar * 
+panel_gconf_get_session_key (void) {
 	static gchar *session_key;
 	if (session_key == NULL)  {
 		const gchar *panel_client_id;
@@ -48,7 +51,8 @@ panel_gconf_all_global_entries (void)
 	return list;
 }
 
-gint panel_gconf_global_config_get_int (const gchar *key) {
+gint 
+panel_gconf_global_config_get_int (const gchar *key) {
 	gint value;
 	gchar *full_key;
 
@@ -60,7 +64,8 @@ gint panel_gconf_global_config_get_int (const gchar *key) {
 	return value;
 }
 
-gboolean panel_gconf_global_config_get_bool (const gchar *key) {
+gboolean
+panel_gconf_global_config_get_bool (const gchar *key) {
 	gboolean value;
 	gchar *full_key;
 	
@@ -72,7 +77,8 @@ gboolean panel_gconf_global_config_get_bool (const gchar *key) {
 	return value;
 }
 
-gchar * panel_gconf_global_config_get_string (const gchar *key) {
+gchar * 
+panel_gconf_global_config_get_string (const gchar *key) {
 	gchar *value;
 	gchar *full_key;
 
@@ -84,7 +90,8 @@ gchar * panel_gconf_global_config_get_string (const gchar *key) {
 	return value;
 }
 
-void panel_gconf_global_config_set_int (const gchar *key, gint value) {
+void 
+panel_gconf_global_config_set_int (const gchar *key, gint value) {
 	gchar *full_key;
 
 	full_key = panel_gconf_global_config_get_full_key (key);
@@ -98,7 +105,8 @@ void panel_gconf_global_config_set_int (const gchar *key, gint value) {
 	return;
 }
 
-void panel_gconf_global_config_set_bool (const gchar *key, gboolean value) {
+void 
+panel_gconf_global_config_set_bool (const gchar *key, gboolean value) {
 	gchar *full_key;
 
 	full_key = panel_gconf_global_config_get_full_key (key);
@@ -111,7 +119,8 @@ void panel_gconf_global_config_set_bool (const gchar *key, gboolean value) {
 	return;
 }
 
-void panel_gconf_global_config_set_string (const gchar *key, const gchar *value) {
+void 
+panel_gconf_global_config_set_string (const gchar *key, const gchar *value) {
 	gchar *full_key;
 
 	full_key = panel_gconf_global_config_get_full_key (key);
@@ -121,5 +130,25 @@ void panel_gconf_global_config_set_string (const gchar *key, const gchar *value)
 				 NULL);
 
 	g_free (full_key);
+	return;
+}
+
+void 
+panel_gconf_notify_add (const gchar *key, GConfClientNotifyFunc notify_func, gpointer user_data) {
+	gconf_client_notify_add (panel_gconf_get_client (),
+				 key,
+				 notify_func,
+				 user_data,
+				 NULL,
+				 NULL);
+	return;
+}
+
+void
+panel_gconf_add_dir (const gchar *key) {
+	gconf_client_add_dir (panel_gconf_get_client (),
+			      key,
+			      GCONF_CLIENT_PRELOAD_NONE,
+			      NULL);
 	return;
 }
