@@ -1,3 +1,13 @@
+2001-12-10  Glynn Foster  <glynn.foster@sun.com>
+
+	* basep-widget.c, gnome-panel-properties.c
+	  gnome-panel-properties.glade, main.c
+	  panel-gconf.c, panel-gconf.h, panel_config_global.h
+	  panelglobalconfig.schemas, session.c: 
+
+	Fix up gconf stuff. Now things work with the global
+	properties dialog.
+
 2001-12-10 Stephen Browne <stephen.browne@sun.com>
 
 	* gnome-panel-properties.c
